Fix main overflow

--- a/src/components/Main/main.module.scss
+++ b/src/components/Main/main.module.scss
@@ -4,6 +4,6 @@
   background-color: #e0e0e0;
   height: 100vh;
   width: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
   padding: 1rem;
 }
